<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:flow_horizontalAlign="center"
    android:background="@drawable/screen_default">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/onboarding4"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/onboarding_font"
        android:text="@string/comenzar_tit"
        android:textAlignment="center"
        android:textColor="@color/blue_gesgaraj"
        android:textSize="30sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:text="@string/comenzar_desc"
        android:fontFamily="@font/onboarding_font"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/blue_gesgaraj"
        android:textSize="14sp"/>
    <Button
        android:id="@+id/startButton"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/btn_comenzar"
        android:padding="8dp"
        android:fontFamily="@font/onboarding_font"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        app:cornerRadius = "12dp"
        android:backgroundTint="@color/blue_gesgaraj" />
</LinearLayout>