<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnboardingNavigation"
    android:background="@drawable/screen_default">
    <Button
        android:id="@+id/btn_omitir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/omitir_navigation"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/blue_gesgaraj"
        android:textSize="14sp"
        app:cornerRadius = "15dp"
        android:padding="8dp"
        android:drawableRight="@drawable/baseline_skip_next_24_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slideViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
        android:id="@+id/btn_atras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:text="@string/atras_navigation"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        android:textColor="@color/blue_gesgaraj"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btn_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siguiente_navigation"
        android:textSize="18sp"
        android:background="#00000000"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/blue_gesgaraj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <LinearLayout
        android:id="@+id/dotIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/slideViewPager">
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>